fix: EditorForm z-index

--- a/packages/design/components/EditorForm/style/index.less
+++ b/packages/design/components/EditorForm/style/index.less
@@ -11,7 +11,7 @@
     border: 2px solid @gray-10;
     border-radius: 12px;
     padding: 8px 6px 6px;
-    z-index: 9999;
+    z-index: 4000;
   }
 
   &__toolbox {
